--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 extern
 server/testOutput
 server/testSrc/testExtern/log
-server/lib/log/server.log
 makeSqliteTable/jsonDBDateien/*
 makeSqliteTable/datenbank.db
+server/lib/log
