--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,17 @@
     "@eslint/js": "^9.12.0",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
+    "gulp": "^4.0.2",
+    "husky": "^8.0.0",
     "jest": "29.7.0",
     "jest-extended": "4.0.2",
     "jest-junit": "16.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "better-sqlite3",
+      "es5-ext"
+    ]
   }
 }
